--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^2.1.4",
     "@shelf/jest-mongodb": "^4.1.7",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
@@ -31,10 +32,13 @@
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "zod-express-middleware": "^1.4.0"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "mongodb": "^5.7.0",
-    "nanoid": "^3"
+    "nanoid": "^3",
+    "zod": "^3.22.4"
   }
 }
