--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
+    "express-async-errors": "^3.1.1",
     "jest": "^29.6.2",
     "jest-environment-node": "^29.6.2",
     "nodemon": "^3.0.1",
