--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud-saas-coding-test",
+  "name": "crud-node-coding-test",
   "version": "0.0.1",
   "description": "",
   "scripts": {
